codepkg/objects/HH_Application__c.object
<CustomObject>
    <fields>
        <fullName>Physical_State_Province__c</fullName>
        <description>Physical State/Province</description>
        <formula>Applicant__r.Physical_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Physical State/Province</inlineHelpText>
        <label>Physical State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Zip_Postal_Code__c</fullName>
        <description>Physical ZIP/Postal Code</description>
        <formula>Applicant__r.Physical_Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Physical ZIP/Postal Code</inlineHelpText>
        <label>Physical Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>Applicant Primary Phone</description>
        <formula>Applicant__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Applicant Primary Phone</inlineHelpText>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <description>Is the property the homeowner’s primary residence?</description>
        <inlineHelpText>Is the property the homeowner’s primary residence?</inlineHelpText>
        <label>Primary Residence?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Document Creation</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>HH_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Currently_Damaged__c</fullName>
        <description>Select any of the following elements on the property currently damaged?</description>
        <inlineHelpText>Select any of the following elements on the property currently damaged?</inlineHelpText>
        <label>Property Currently Damaged?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Deck</fullName>
                </value>
                <value>
                    <fullName>Doors</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Siding</fullName>
                </value>
                <value>
                    <fullName>Vents</fullName>
                </value>
                <value>
                    <fullName>Walls</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Foreclosed_or_in__c</fullName>
        <description>Is the property in the process of foreclosure?</description>
        <inlineHelpText>Is the property in the process of foreclosure?</inlineHelpText>
        <label>Property Foreclosed or in Foreclosure?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Liens__c</fullName>
        <description>Does the property have any liens?</description>
        <inlineHelpText>Does the property have any liens?</inlineHelpText>
        <label>Does the Property Have Any Liens?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <description>Are you the owner of the property?</description>
        <inlineHelpText>Are you the owner of the property?</inlineHelpText>
        <label>Property Owner?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Street_Address__c</fullName>
        <description>Street Address of Property.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Street Address of Property.</inlineHelpText>
        <label>Property Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Structure__c</fullName>
        <description>What type of structure is the property?</description>
        <inlineHelpText>What type of structure is the property?</inlineHelpText>
        <label>Property Structure Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family Residence Single Story</fullName>
                </value>
                <value>
                    <fullName>Single Family Residence Multi Story</fullName>
                </value>
                <value>
                    <fullName>Multi Family Residence Single Story</fullName>
                </value>
                <value>
                    <fullName>Multi Family Residence Multi Story</fullName>
                </value>
                <value>
                    <fullName>Manufactured or Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Manufactured or Mobile Home; Other</fullName>
                    <isActive>false</isActive>
                    <label>Manufactured or Mobile Home; Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_To_Withdraw__c</fullName>
        <description>Reason for withdrawal of the Application.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reason for withdrawal of the Application.</inlineHelpText>
        <label>Reason To Withdraw</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Rejected_Closed__c</fullName>
        <description>Reasons for Rejected -Closed</description>
        <inlineHelpText>Reasons for Rejected -Closed</inlineHelpText>
        <label>Reasons for Rejected -Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community: Rejected - Does Not Meet Criteria</fullName>
                </value>
                <value>
                    <fullName>Assessment: Rejected - Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Cal OES: Rejected - Does Not Meet Criteria</fullName>
                </value>
                <value>
                    <fullName>FEMA: Rejected - Does Not Meet Criteria</fullName>
                </value>
                <value>
                    <fullName>Closed - Homeowner Withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <description>Reason for Rejection of the Application.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reason for Rejection of the Application.</inlineHelpText>
        <label>Rejection Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relative_URL__c</fullName>
        <description>Base URL</description>
        <formula>$Label.Base_URL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property__c</fullName>
        <description>Is the property a rental property?</description>
        <inlineHelpText>Is the property a rental property?</inlineHelpText>
        <label>Rental Property?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Applicant Secondary Phone</description>
        <formula>Applicant__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Applicant Secondary Phone</inlineHelpText>
        <label>Secondary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of the application</description>
        <inlineHelpText>Stage of the application</inlineHelpText>
        <label>Application Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Community Review</fullName>
                </value>
                <value>
                    <fullName>Community Decision</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Assessment Decision</fullName>
                </value>
                <value>
                    <fullName>CalOES Review</fullName>
                    <label>Cal OES Review</label>
                </value>
                <value>
                    <fullName>OES Decision</fullName>
                    <label>Cal OES Decision</label>
                </value>
                <value>
                    <fullName>FEMA Review</fullName>
                </value>
                <value>
                    <fullName>FEMA Decision</fullName>
                </value>
                <value>
                    <fullName>Approved- Converted</fullName>
                    <label>Approved - Converted</label>
                </value>
                <value>
                    <fullName>Rejected - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State of the property</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>State of the property</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the application</description>
        <inlineHelpText>Status of the application</inlineHelpText>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Appeal Approval - Resubmit</fullName>
                </value>
                <value>
                    <fullName>Community Review Pending</fullName>
                </value>
                <value>
                    <fullName>Community Review In  Progress</fullName>
                    <label>Community Review In Progress</label>
                </value>
                <value>
                    <fullName>Approved for Assessment</fullName>
                </value>
                <value>
                    <fullName>Assessment Pending</fullName>
                </value>
                <value>
                    <fullName>Assessment In progress</fullName>
                </value>
                <value>
                    <fullName>Open Community RFI- Need more Info</fullName>
                    <label>Community RFI Opened - Need More Information</label>
                </value>
                <value>
                    <fullName>Assessment Complete</fullName>
                </value>
                <value>
                    <fullName>Ready for Cal OES Review</fullName>
                </value>
                <value>
                    <fullName>Rejected - Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Pending Cal OES Review</fullName>
                    <label>Cal OES Review Pending</label>
                </value>
                <value>
                    <fullName>OES Review In Progress</fullName>
                    <label>Cal OES Review In Progress</label>
                </value>
                <value>
                    <fullName>OES RFI- Need more Info</fullName>
                    <label>Cal OES RFI Opened - Need More Information</label>
                </value>
                <value>
                    <fullName>Approved for FEMA Review</fullName>
                </value>
                <value>
                    <fullName>Pending FEMA Review</fullName>
                    <label>FEMA Review Pending</label>
                </value>
                <value>
                    <fullName>FEMA Review In Progress</fullName>
                </value>
                <value>
                    <fullName>FEMA RFI- Need more Info</fullName>
                    <label>FEMA RFI Opened - Need More Information</label>
                </value>
                <value>
                    <fullName>Approved for Project Conversion</fullName>
                    <label>FEMA Approved</label>
                </value>
                <value>
                    <fullName>Rejected - Does not meet Criteria</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Approved  for Project Conversion</fullName>
                    <isActive>false</isActive>
                    <label>Approved  for Project Conversion</label>
                </value>
                <value>
                    <fullName>Community Decision Pending</fullName>
                    <isActive>false</isActive>
                    <label>Community Decision Pending</label>
                </value>
                <value>
                    <fullName>Community Review Complete</fullName>
                    <isActive>false</isActive>
                    <label>Community Review Complete</label>
                </value>
                <value>
                    <fullName>FEMA Review Complete</fullName>
                    <isActive>false</isActive>
                    <label>FEMA Review Complete</label>
                </value>
                <value>
                    <fullName>OES Review Complete</fullName>
                    <isActive>false</isActive>
                    <label>OES Review Complete</label>
                </value>
                <value>
                    <fullName>Pending Community Review</fullName>
                    <isActive>false</isActive>
                    <label>Pending Community Review</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <description>Date of Application Submission</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of Application Submission</inlineHelpText>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tax_Parcel_Number__c</fullName>
        <description>Tax Parcel Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Tax Parcel Number</inlineHelpText>
        <label>Tax Parcel #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Income__c</fullName>
        <description>Total Annual Household Income</description>
        <inlineHelpText>Total Annual Household Income</inlineHelpText>
        <label>Total Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Living_Area__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total living area in sq. ft (all floors)</description>
        <inlineHelpText>Total living area in sq. ft (all floors)</inlineHelpText>
        <label>Total Living Area (sq ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_State_Codes__c</fullName>
        <description>US State Codes</description>
        <label>US State Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Household_Number__c</fullName>
        <description>Unique Household Number of Homeowner</description>
        <formula>Applicant__r.Account.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique Household Number of Homeowner</inlineHelpText>
        <label>Unique Household Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Registration_Date__c</fullName>
        <formula>Applicant__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant&apos;s Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Which_program_s_and_when__c</fullName>
        <description>From which program did you receive the assistance and approximately when?</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>From which program did you receive the assistance and approximately when?</inlineHelpText>
        <label>Which program(s) and when?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year_of_Construction__c</fullName>
        <description>Year of Construction of the Property?</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Year of Construction of the Property?</inlineHelpText>
        <label>Year of Construction</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code of Property</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Zip/Postal Code of Property</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CWMP Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Converted_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Approved- Converted</value>
        </filters>
        <label>Approved - Converted Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assessment_Decision_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Assessment Decision</value>
        </filters>
        <label>Assessment Decision Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assessment_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Assessment</value>
        </filters>
        <label>Assessment Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cal_OES_Decision_Stage_Application</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>OES Decision</value>
        </filters>
        <label>Cal OES Decision Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cal_OES_Review_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>CalOES Review</value>
        </filters>
        <label>Cal OES Review Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Community_Decision_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Community Decision</value>
        </filters>
        <label>Community Decision Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Community_Review_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Community Review</value>
        </filters>
        <label>Community Review Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Draft_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FEMA_Decision_Stage_Application</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>FEMA Decision</value>
        </filters>
        <label>FEMA Decision Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FEMA_Review_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>FEMA Review</value>
        </filters>
        <label>FEMA Review Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HH_Community_FEMA_Analyst_HH_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>CWMP Community FEMA Analyst</label>
        <queue>HH_Community_FEMA_Analyst</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected_Closed_Stage_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant_First_Name__c</columns>
        <columns>Applicant_Last_Name__c</columns>
        <columns>County__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Rejected - Closed</value>
        </filters>
        <label>Rejected - Closed Stage Applications</label>
        <sharedTo>
            <group>HH_Cal_OES_Internal_Analyst</group>
            <group>HH_Community_San_Diego_County_Group</group>
            <group>HH_Community_Shasta_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CWMPA-{000000}</displayFormat>
        <label>CWMP Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CWMP Applications</pluralLabel>
    <recordTypes>
        <fullName>Editable_Record_Type</fullName>
        <active>true</active>
        <description>This record Type is created to assign to user upon record is assigned to FEMA User/Internal User to make the record editable.</description>
        <label>Editable Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only_Record_Type</fullName>
        <active>true</active>
        <description>This record Type is created to assign to user upon record is assigned to FEMA User/Internal User.</description>
        <label>Read Only Record Type</label>
    </recordTypes>
</CustomObject>